# atlas

./: .gitignore  Dockerfile  README.md  buyer-team-mcp.example.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/atlas/: __init__.py
src/atlas_counsel/: ablation.py
src/atlas_counsel/agent/: schemas.py
src/atlas_counsel/corpus/: generator.py
tests/: test_corpus.py  test_qdrant_integration.py  test_qdrant_resilience.py  test_service.py
