[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gustavo Azevedo", email = "Gustavo.Peixoto.de.Azevedo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
atlas = "atlas:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
